# OutliMer

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml
docs/: CHANGE_GUIDE.md  TEST_DATASETS.md
examples/toy/: README.md  samples.tsv
examples/toy/fasta/: toy_case_1.fa  toy_control_1.fa  toy_control_2.fa
src/OutliMer/: OutliMer.py  __init__.py  classification.py  profiles.py
src/OutliMer/kmer_outputs/export_kmers/: top_union_summary.csv
src/OutliMer/kmer_outputs_OLD/: kmer_report.csv
src/OutliMer/kmer_outputs_OLD/export_kmers/classify/: explanations_by_sample.csv  hash_enrichment.csv  outliers_report.csv  top_anomalies.csv
tests/: test_classification.py  test_extensions.py  test_outlimer_core.py  test_packaging.py  test_profiles.py
tests/data/: classifier_truth.csv  classifier_truth.tsv
