[build-system]
requires = ["setuptools", "wheel", ]
build-backend = "setuptools.build_meta"

[project]
name = "OutliMer"
version = "0.1.0"
authors = [
    {name = "Nicholas Dimonaco", email = "nicholas@dimonaco.co.uk"}
]
description = "OutliMer - A a tool to detect outlier samples using k-mers and hashes."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["Genome annotation", "Gene Prediction"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [

]

[project.urls]
Homepage = "https://github.com/NickJD/OutliMer"
"Bug Tracker" = "https://github.com/NickJD/OutliMer/issues"

[project.scripts]
    OutliMer = "OutliMer.OutliMer:main"



[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["OutliMer*"]

[tool.setuptools.package-data]
OutliMer = [
]



