[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "OutliMer"
dynamic = ["version"]
description = "OutliMer ranks unusual genomic and metagenomic samples from sourmash k-mer hashes."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
authors = [
    {name = "Nicholas Dimonaco", email = "nicholas@dimonaco.co.uk"},
]
keywords = [
    "bioinformatics",
    "genomics",
    "metagenomics",
    "k-mers",
    "sourmash",
    "outlier detection",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "matplotlib>=3.6",
    "numpy>=1.23",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "scipy>=1.9",
    "seaborn>=0.12",
    "sourmash>=4.8",
]

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "pytest>=7.4",
    "ruff>=0.5",
    "twine>=6.1",
]

[project.urls]
Homepage = "https://github.com/NickJD/OutliMer"
Repository = "https://github.com/NickJD/OutliMer"
"Bug Tracker" = "https://github.com/NickJD/OutliMer/issues"

[project.scripts]
outlimer = "OutliMer.OutliMer:main"
OutliMer = "OutliMer.OutliMer:main"
outlimer-classify = "OutliMer.classification:main"
outlimer-profile = "OutliMer.profiles:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "OutliMer.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["OutliMer*"]
namespaces = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["F"]
ignore = ["F841"]
